# batchimage

./: .gitignore  README.md  changes.md  pyproject.toml
batchimage/: batch_image_cli.py  batch_image_module.py  resize.py  validate.py
tests/: test_batchimage.py
