[tool.poetry]
name = "batchimage"
version = "0.1.0"
description = "Batch Image Converter"
authors = [ "Sumanth <sumanthreddystar@gmail.com>" ]
maintainers = [ "Sumanth <sumanthreddystar@gmail.com>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.5.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
